# opensearch_rag

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt  setup.py
alembic/: README.md  env.py
alembic/versions/: 20260520_0001_initial_schema.py  20260524_0002_react_migration.py  20260526_0003_add_indexes.py
infra/: .env.example  README.md  docker-compose.override.yml  docker-compose.yml
infra/caddy/: Caddyfile  Caddyfile.example
infra/postgres/: README.md  init.sql
infra/redis/: README.md  redis.conf
infra/scripts/: entrypoint.sh
src/app/: README.md  __init__.py  app_fastapi.py  app_rag.py  dependencies.py  ingest.py  query_processor.py  rag.py  schemas.py
src/app/auth/: csrf.py  ldap_service.py  middleware.py  session.py
src/app/cli/: admin.py
src/app/db/: models.py  session.py
src/app/loader/: __init__.py  chunk_splitter.py  config.py  document_loader.py  document_processor.py  embeddings.py  vector_store.py
src/app/metadata/: redis_service.py
src/app/routes/: admin.py  auth.py  chat.py  documents.py  user.py
src/app/routes/admin/: __init__.py  _shared.py  audit.py  groups.py  instances.py  ldap.py  settings.py  status.py  users.py
src/app/services/: chat_service.py  config_service.py  document_service.py  instance_service.py  user_service.py
src/app/ui/: actions.py  main.py
src/app/ui/components/: chat_interface.py  upload_accordion.py
src/app/utils/: crypto.py  flash.py  logging_config.py  templates.py
src/frontend/: index.html  package.json  tsconfig.node.json  vite.config.ts
src/frontend/src/: App.tsx  index.css  main.tsx
src/frontend/src/api/: client.ts
src/frontend/src/components/: AppShell.tsx  ImpersonationBanner.tsx  InstanceSelector.tsx  MessageBubble.tsx  OnlineUsers.tsx  Sidebar.tsx  SourcesPanel.tsx  ThemeToggle.tsx  ThinkingIndicator.tsx
src/frontend/src/hooks/: useChat.ts  useDocumentUpload.ts
src/frontend/src/i18n/: de.json  en.json  index.ts
src/frontend/src/pages/: ChatPage.tsx  DocumentsPage.tsx  HistoryPage.tsx  LoginPage.tsx
src/resources/: styles.css
src/resources/js/: chat-history.js  chat.js  common.js  documents.js  table-sort.js
src/templates/: base.html  chat.html  chat_history.html  documents.html  login.html
src/templates/admin/: _pagination.html  groups.html  instance_detail.html  instances.html  settings.html  status.html  users.html
src/templates/errors/: 403.html  404.html  500.html
tests/: conftest.py
tests/security/: test_admin_access.py  test_instance_isolation.py
tests/unit/: test_crypto.py
(+14 files in other folders)
